# xgit-python

./: README.md  TODO.md  setup.cfg
xgit/: __init__.py  xgit_command.py  xgit_filter.py  xgit_modify_author.py  xgit_modify_committer.py  xgit_summary.py  xgit_util.py
