[metadata]
name = xgit-python
version = attr: xgit.__version__
keywords = git, GitPython, xgit
description = Git tool based on GitPython.
author = mingzhe
author_email = zoumingzhe@qq.com
url = https://github.com/zoumingzhe/xgit-python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/zoumingzhe/xgit-python
    Bug Tracker = https://github.com/zoumingzhe/xgit-python/issues
    Documentation = https://github.com/zoumingzhe/xgit-python

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    GitPython
    xarg-python >= 0.5
packages = find:

[options.entry_points]
console_scripts =
    xgit = xgit.xgit_command:main
    xgit-summary = xgit.xgit_summary:main
    xgit-modify-author = xgit.xgit_modify_author:main
    xgit-modify-committer = xgit.xgit_modify_committer:main

[options.packages.find]
include = xgit*
exclude =
    tests
